--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -494,9 +494,11 @@ div.wysiwyg ul.toolbar {
       font-size: 0.8em;
     }
   }
+  #wphoto_uploadUploader {
+    
+  }
 
   .crumb-wrap {
-    .rename-link { float: right; font-weight: bold;}
     padding: 1px 0 0 0;
   }
   select {
