--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -363,6 +363,12 @@ div.wysiwyg ul.toolbar {
 .widget-editor .edit-area label {
   white-space: normal; }
 
+.wphoto-wrap img {
+  -moz-border-radius: 3px;
+  -khtml-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px; }
+
 .wphoto-wrap .selected-file {
   width: 120px;
   height: 1.25em;
