--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -403,6 +403,12 @@ div.wysiwyg ul.toolbar {
   }
 }
 
+.wphoto-wrap img {
+  -moz-border-radius: 3px;
+  -khtml-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+}
 .wphoto-wrap .selected-file {
   width: 120px;
   height: 1.25em;
