--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -279,14 +279,19 @@ p {
 
     & > div { padding-bottom: 2px; }
     & > :empty { padding: 0; }
+
     img {
-      max-height: 290px;
-      max-width: 290px; }
-    & > .wphoto {
+      /* Optional rounded corners for browsers that support it */
+      -moz-border-radius: 3px;
+      -khtml-border-radius: 3px;
+      -webkit-border-radius: 3px;
+      border-radius: 3px;
+    }
+    .wphoto {
       text-align: center;
       width: 70px;
       float: left; }
-    & > .wphoto + div {
+    .wphoto + div {
       width: 200px;
       padding-left: 10px;
       float: left; }
