--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -162,8 +162,9 @@
   #dialog-invalid-drag title="Oops"
     p
       span.ui-icon.ui-icon-alert style="float:left"
-      | New widgets can only be added to the mobile home screen.
-    p Please return to the mobile home screen and try adding again.
+      | &nbsp;&nbsp;New widgets can only be added to the mobile home screen.
+    p <br>
+    p Please click on Home in the mobile tab bar to return to the home screen and add the widget.
 
   / =============================
   / = Category Add-Item Dialogs =
