--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -358,13 +358,10 @@
   script.category-cat(type="text/template")
     .category.item class="{{ cycle }}" data-id="{{ cat._id }}"
       | <% if (cat.wphotoUrl) { %>
-      table
-        tbody
-          tr
-            td
-              img src="{{ cat.wphotoUrl }}"
-            td
-              | {{ cat.name }}
+      .wphoto
+        img src="{{ cat.wphotoUrl }}"
+      div
+        | {{ cat.name }}
       | <% } else { %>
       | {{ cat.name }}
       | <% } %>
