Reworked category cat and item html

--- a/app/views/shared/_category-templates.slim
+++ b/app/views/shared/_category-templates.slim
@@ -69,8 +69,6 @@ script.item-wrap type="text/template"
     | <% if (item.wphotoUrl) { %>
     .wphoto
       img src="{{ item.wphotoUrl }}"
-    div
+    | <% } %>
+    .content
       | <% print( itemTemplate({ item:item }) ); %>
-    | <% } else {
-            print( itemTemplate({ item:item }) );
-    | } %>
