--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -57,7 +57,7 @@ p {
       margin-bottom: 0;
       color: #880000; } } }
 
-#canvas .page .content {
+#canvas .page > .content {
   min-height: 120px;
   padding: 20px 10px;
   font-size: 16px;
@@ -287,12 +287,16 @@ p {
       -webkit-border-radius: 3px;
       border-radius: 3px;
     }
+    .content {
+      width: 97%;
+      float: none;
+    }
     .wphoto {
       text-align: center;
-      width: 70px;
+      width: 27%;
       float: left; }
-    .wphoto + div {
-      width: 200px;
+    .wphoto + .content {
+      width: 64%;
       padding-left: 10px;
       float: left; }
   }
