Fixed some category widget styling bugs

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -364,6 +364,7 @@
       | <% } %>
       .content
         | {{ cat.name }}
+      .clearfix= ""
       
 
   script.category-page(type="text/template")
