Added divider to subcat dialog

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -36,6 +36,7 @@ script.add-subcat-dialog(type="text/template")
       p.error Error: {{ _maybe.error }}
       | <% } %>
       | <% if (addedCats.length > 0) { %>
+      .divider
       .other-names
         b Added <% print( util.pluralize(typeName) ); %>:
         ul
