--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -506,9 +506,6 @@ div.wysiwyg ul.toolbar {
       font-size: 0.8em;
     }
   }
-  #wphoto_uploadUploader {
-    
-  }
 
   .crumb-wrap {
     padding: 1px 0 0 0;
@@ -663,26 +660,9 @@ div.wysiwyg ul.toolbar {
 }
 
 
-.uploadifyQueueItem {
-    border: 1px solid #ccc;
-    background: #e4edf8;
-    padding: 10px;
+div.plupload {
+  cursor: pointer;
 }
-.uploadifyError {
-    border: 1px solid #dd3c10 !important;
-    background: #ffebe8 !important;
-}
-.uploadifyQueueItem .cancel {
-    float: right;
-}
-.uploadifyProgress {
-    background-color: #333;
-    border: 1px inset #818181;
-    margin-top: 8px;
-    width: 100%;
-}
-.uploadifyProgressBar {
-    background-color: $highlight-color;
-    width: 1px;
-    height: 3px;
+button[name=pick_files] {
+  cursor: pointer;
 }
