--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -359,13 +359,16 @@
   script.category-cat(type="text/template")
     .category.item class="{{ cycle }}" data-id="{{ cat._id }}"
       | <% if (cat.wphotoUrl) { %>
-      .wphoto
-        img src="{{ cat.wphotoUrl }}"
+      table
+        tbody
+          tr
+            td
+              img src="{{ cat.wphotoUrl }}"
+            td
+              | {{ cat.name }}
+      | <% } else { %>
+      | {{ cat.name }}
       | <% } %>
-      .content
-        | {{ cat.name }}
-      .clearfix= ""
-      
 
   script.category-page(type="text/template")
     | <% for (var i=0; i<stuff.length;i++) {
