--- a/app/views/shared/_category-templates.slim
+++ b/app/views/shared/_category-templates.slim
@@ -60,7 +60,7 @@ script.locations-item type="text/template"
 
 / this represents a page in the page_tree list view
 script.category-item type="text/template"
-  .leaf-name.item class="{{ cycle }}" data-id="{{ item._id }}"
+  .leaf-name.item data-id="{{ item._id }}"
     | {{ item.name }}
 
 / this template is used when a photo is being displayed
