--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -176,6 +176,9 @@
   / = Widget Show Pages =
   / =====================
   script.custom_page-page(type="text/template")
+    | <% if (_maybe.wphotoUrl) { %>
+    img src="{{ wphotoUrl }}"
+    | <% } %>
     | {{ _maybe.content }}
     .clearfix
   
@@ -410,6 +413,24 @@
     input(name="userId" type="text" value="{{ _maybe.userId }}")
   
   script.custom-page-edit-area.about-us-edit-area(type="text/template")
+    table.wphoto-wrap
+      tbody
+        tr
+          td
+            img src="{{ wphotoPreviewPath }}"
+          td
+            label Select a Picture...
+            br
+            .selected-file.lfloat &nbsp;
+            button name="pick_files" Browse...
+            .error
+        | <% if (wphotoPreviewPath !== '/images/no-wphoto.png') { %>
+        tr
+          td
+            a.remove-wphoto-link href="#" Remove Picture
+          td
+        | <% } %>
+    input type="hidden" value="{{ _maybe.wphotoUrl }}" name="wphotoUrl"
     #jeditor-wrapper
       textarea#jeditor rows=8 cols=8 {{ _maybe.content }}
 
