--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -366,9 +366,9 @@
       table
         tbody
           tr
-            td
+            td.img-col
               img src="{{ cat.wphotoUrl }}"
-            td
+            td.txt-col
               | {{ cat.name }}
       | <% } else { %>
       | {{ cat.name }}
@@ -389,7 +389,7 @@
   
   script.page_tree-page(type="text/template")
     h3 {{ title }}
-    | <% if (_maybe.wphotoUrl) { %>
+    | <% if (_maybe.wphotoUrlLarge) { %>
     .wphoto-large
       img src="{{ wphotoUrlLarge }}"
     | <% } %>
