--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -316,6 +316,9 @@ p {
     background: #dddddd;
     margin: 0; }
   }
+  .separator {
+    border-top: 1px solid #b3b3b3;
+  }
 
 .page > .content.category {
   .name {
