Updated padding in edit-area.hours and dialog-confirm

--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -363,6 +363,8 @@ div.wysiwyg ul.toolbar {
 .widget-editor .edit-area label {
   white-space: normal; }
 
+#builder .edit-area.hours .double-time-input {
+  margin: 25px 0px 10px 0px; }
 #builder .edit-area.hours .double-time {
   margin-bottom: 10px; }
 #builder .edit-area.hours .day-checkbox {
@@ -444,6 +446,10 @@ div.wysiwyg ul.toolbar {
   background: #ffebe8;
   font-size: 14px; }
 
+#dialog-confirm p {
+  margin: 10px 0px 10px 0px; }
+#dialog-confirm label {
+  padding: 0px 0px 1px 1px; }
 #dialog-confirm input[type=text] {
   width: 97%;
   margin: 1px 0px 6px 0px; }
