--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -498,8 +498,13 @@ div.wysiwyg ul.toolbar {
     font-size: 14px; } }
 
 #dialog-confirm {
+
   p { margin: 10px 0px 10px 0px; }
   label { padding: 0px 0px 1px 1px; }
+  .add-btn, input[type=button] { 
+    margin: 0px; 
+    padding: 2px 8px 2px 8px;
+  }
 
   input[type=text] {
     width: 97%;
@@ -517,7 +522,8 @@ div.wysiwyg ul.toolbar {
     color: #008800;
     padding: 0px;
     margin-top: 13px;
-    font-size: 90%;} }
+    font-size: 90%; } 
+}
 
 #dialog-confirm.edit-icon {
   .icons {
