--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -444,6 +444,8 @@ div.wysiwyg ul.toolbar {
 }
   
 #builder .edit-area.hours {
+  .double-time-input { margin: 30px 0px 10px 0px; }
+  
   .double-time { margin-bottom: 10px; }
   .day-checkbox {
     float: left;
